<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/photo_img"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:background="#000000"
        android:scaleType="centerCrop"
        android:src="@mipmap/emptyface"/>

    <com.dd.CircularProgressButton
        android:id="@+id/detect_photo_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/photo_img"
        android:layout_below="@+id/photo_img"
        android:layout_marginTop="24dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:cpb_selectorIdle="@drawable/idle_state_selector"
        app:cpb_textComplete="@string/detectSuccessful"
        app:cpb_textError="@string/detectError"
        app:cpb_textIdle="@string/detectPhoto"/>


</RelativeLayout>